--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="action_select_all">全选</string>
     <string name="action_cancel">取消</string>
     <string name="search_hint">查找指定笔记本</string>
+    <string name="select_notebook">选择笔记本</string>
 </resources>
